@@ -33,9 +33,10 @@
 ## typically no way to rebuild the header).  We avoid this by adding
 ## dummy dependencies for each header file.  Too bad gcc doesn't do
 ## this for us directly.
-	@-tr '\\ ' '\n\n' < .deps/$(*F).p \
+	@-cp .deps/$(*F).p .deps/$(*F).P; \
+	tr '\\ ' '\n\n' < .deps/$(*F).p \
 	  | sed -e '/^$$/ d' -e '/:$$/ d' -e 's/$$/:/' \
-	    > .deps/$(*F).P; \
+	    >> .deps/$(*F).P; \
 	rm .deps/$(*F).p
 
 %.lo: %@EXT@
@@ -47,6 +48,5 @@
 ## See above to understand deleted header file trick.
 	tr '\\ ' '\n\n' < .deps/$(*F).p \
 	  | sed -e '/^$$/ d' -e '/:$$/ d' -e 's/$$/:/' \
-## Note subtle difference: here we append to the .P file.
 	    >> .deps/$(*F).P; \
 	rm -f .deps/$(*F).p
