@@ -1,5 +1,8 @@
 Thu Oct  1 00:51:51 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* depend2.am (%.o): Append sed results to .P file in this case
+	too.  From Raja R Harinath.
+
 	* m4/lispdir.m4 (AM_PATH_LISPDIR): Correctly find xemacs and
 	xemacs install directories.  From Robert Bihlmeyer.
 
